[refacor] 리뷰 refactoring
WinningRank 테스트의 예상값과 실제값의 인자 위치를 변경
WinningRank의 determineRank 메소드의 filter 내부를 명시적으로 표현하기위해 메소드로 분리
LottoTicket과 WinningBalls 클래스의 의미를 명확하게 하기 위해 WinningTicket 이라고 클래스명을 변경
DuplicationException을 표준예외로 변경
매직넘버 상수화 리팩토링후 테스트 확인
String Format으로 사용
WinningBallUtils 가 인스턴스 변수를 갖고 비지니스 로직을 갖는 부분이 있어서 WinningTicketFactory 클래스를 만들어 검증유틸 부분과 비지니스 로직을 나눴고 테스트를 추가
에러메시지 상수화
전체적인 리팩토링